# Gerber-Diff-Tool

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GerberDiff.spec  GerberDiffSetup.iss  LICENSE  PUBLISH.md  README.md  action.yml  app_entry.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
branding/: README.md
docs/: UX_AUDIT.md
docs/adr/: 0001-platform-and-stack.md
scripts/: build_branding.py
src/gerberdiff/: __init__.py  __main__.py  cli.py  compose.py  diff.py  discovery.py  gitrefs.py  gui.py  models.py  pairing.py  pdfdiff.py  render.py  report.py  runner.py  summary.py  theme.py  viewer.py
tests/: test_cli.py  test_diff.py  test_discovery.py  test_drill.py  test_gitrefs.py  test_gui.py  test_models.py  test_pairing.py  test_pdfdiff.py  test_render.py  test_render_integration.py  test_report.py  test_runner.py  test_summary.py  test_theme.py  test_viewer.py
tests/fixtures/drillA/: fixture.drl
tests/fixtures/drillB/: fixture.drl
tests/fixtures/revA/: fixture-F_Cu.gbr  fixture-F_Mask.gbr
tests/fixtures/revB/: fixture-F_Cu.gbr
