[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gerber-diff"
version = "0.1.0"
description = "Free, offline visual diff for PCB Gerber files and schematic PDFs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Simon Maddison" }]
keywords = ["gerber", "pcb", "diff", "eda", "kicad", "altium", "schematic", "pdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "pygerber>=2.4",   # native Pillow raster + get_info() bbox; no cairo, no system libs
    "gerbonara>=1.6",  # LayerStack auto-detects layer types for rename-tolerant pairing
    "pillow>=10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gdiff = "gerberdiff.cli:main"

[project.urls]
# TODO: replace OWNER with the GitHub account this lands under before publishing.
Homepage = "https://github.com/OWNER/Gerber-Diff-Tool"
Repository = "https://github.com/OWNER/Gerber-Diff-Tool"
Issues = "https://github.com/OWNER/Gerber-Diff-Tool/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gerberdiff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # pygerber's grammar uses pyparsing's deprecated oneOf(); not our concern.
    "ignore:'oneOf' deprecated:DeprecationWarning",
]
