[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gerber-diff"
version = "0.7.0"
description = "Free, offline visual diff for PCB Gerber files and schematic PDFs."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Simon Maddison" }]
keywords = ["gerber", "pcb", "diff", "eda", "kicad", "altium", "schematic", "pdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "pygerber>=2.4",   # native Pillow raster + get_info() bbox; no cairo, no system libs
    "gerbonara>=1.6",  # LayerStack auto-detects layer types for rename-tolerant pairing
    "pypdfium2>=4.0",  # PDFium PDF page rendering for schematic diff; pip wheel, no system libs
    "pillow>=10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "pyyaml>=6.0"]

[project.scripts]
gdiff = "gerberdiff.cli:main"
gdiff-gui = "gerberdiff.gui:main"

[project.urls]
Homepage = "https://github.com/Cimos/Gerber-Diff-Tool"
Repository = "https://github.com/Cimos/Gerber-Diff-Tool"
Issues = "https://github.com/Cimos/Gerber-Diff-Tool/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gerberdiff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # pygerber's grammar uses pyparsing's deprecated oneOf(); not our concern.
    "ignore:'oneOf' deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # long CSS string literals in report.py; formatter owns code width

[tool.coverage.run]
source = ["gerberdiff"]
branch = true
omit = [
    "src/gerberdiff/gui.py",       # Tk UI not headless-testable (import + no-Tk guard are)
    "src/gerberdiff/__main__.py",  # thin `python -m gerberdiff` shim
]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
